--- a/base/templates/registration/activate.html
+++ b/base/templates/registration/activate.html
@@ -1,9 +1,9 @@
 {% extends 'base/base.html' %}
 
 {% block content %}
+<div class="col-sm-12">
+  <h2> Falló la activación de tu cuenta </h2>
 
-<h2> Falló la activación de tu cuenta </h2>
-
-<h2> Clave de activación no válida: {{ activation_key }}  </h2>
-
+  <h2> Clave de activación no válida: {{ activation_key }}  </h2>
+</div>
 {% endblock %}
