--- a/base/templates/registration/login.html
+++ b/base/templates/registration/login.html
@@ -1,18 +1,20 @@
 {% extends 'base/base.html' %}
 
 {% block content %}
-<h3> Bienvenido a Loiprocesos.com</h3>
+<div class="col-sm-12">
+  <h3> Bienvenido a Loiprocesos.com</h3>
 
-<p>Logueate con tu cuenta:</p>
+  <p>Logueate con tu cuenta:</p>
 
-<form method="POST">{% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Acceder!</button>
-</form>
-<div class="row">
-  <p class="in-line-preg">¿Te olvidaste la contraseña?  -  </p><a class="in-line-preg" href="/accounts/password/reset">  Cambiar la contraseña</a>
-</div>
-<div class="row">
-  <p class="in-line-preg">¿Todavía no tenés cuenta?  -  </p><a class="in-line-preg" href="/accounts/register">  ¡Registrate ahora!</a>
+  <form method="POST">{% csrf_token %}
+      {{ form.as_p }}
+      <button type="submit">Acceder!</button>
+  </form>
+  <div class="row">
+    <p class="in-line-preg">¿Te olvidaste la contraseña?  -  </p><a class="in-line-preg" href="/accounts/password/reset">  Cambiar la contraseña</a>
+  </div>
+  <div class="row">
+    <p class="in-line-preg">¿Todavía no tenés cuenta?  -  </p><a class="in-line-preg" href="/accounts/register">  ¡Registrate ahora!</a>
+  </div>
 </div>
 {% endblock %}
