--- a/base/templates/registration/password_reset_confirm.html
+++ b/base/templates/registration/password_reset_confirm.html
@@ -2,6 +2,7 @@
 
 
 {% block content %}
+<div class="col-sm-12">
 <h1>Cambiar la contraseña</h1>
 
 {% if validlink %}
@@ -21,4 +22,5 @@
 <p>El link para cambiar la contraseña no es válido, posiblemente porque ya fue usado. Solicite una nueva contraseña para cambiarla nuevamente.</p>
 
 {% endif %}
+</div>
 {% endblock %}
