--- a/base/templates/registration/password_reset_done.html
+++ b/base/templates/registration/password_reset_done.html
@@ -2,10 +2,11 @@
 
 
 {% block content %}
+<div class="col-sm-12">
 <h1>Listo!</h1>
 
 <p>Revisá tu correo! Te enviamos un e-mail con instrucciones para cambiar la contraseña</p>
 <p> </p>
 <p>Si no recibiste ningún correo, asegurate de que escribiste el correo que usaste para registrarte, y revisá la carpeta de spam.</p>
-
+</div>
 {% endblock %}
