--- a/base/templates/registration/password_reset_form.html
+++ b/base/templates/registration/password_reset_form.html
@@ -2,6 +2,7 @@
 
 
 {% block content %}
+<div class="col-sm-12">
 <h1> Solicitar una nueva contraseña </h1>
 <p>Te olvidaste la contraseña? Escribí tu email abajo y te vamos a enviar instrucciones para cambiarla.</p>
 
@@ -9,5 +10,5 @@
 {{ form.email.errors }}
 <p><label for="id_email"> Email:</label> {{ form.email }} <input type="submit" value="Cambiar mi contraseña" /></p>
 </form>
-
+</div>
 {% endblock %}
