--- a/clases/templates/clases/clases_home.html
+++ b/clases/templates/clases/clases_home.html
@@ -1,6 +1,7 @@
 {% extends 'base/base.html' %}
 
 {% block content %}
+<div class="col-sm-12">
   <h1>Clases de Procesos!!</h1>
   {% if texts %}
     {% for text in texts %}
@@ -37,4 +38,6 @@
     </script>
 
   {% endif %}
+
+<div class="col-sm-12">
 {% endblock %}
