--- a/clases/templates/clases/preguntas.html
+++ b/clases/templates/clases/preguntas.html
@@ -1,6 +1,7 @@
 {% extends 'base/base.html' %}
 
 {% block content %}
+<div class="col-sm-12">
   <div class="panel panel-primary">
     <div class="panel-body">
       {{ warn }}
@@ -12,5 +13,5 @@
     <input type="submit" name="add" class="save btn btn-default" value="Cargar y agregar otra"></input>
 
   </form>
-
+<div class="col-sm-12">
 {% endblock %}
