--- a/clases/templates/clases/trabajos_practicos.html
+++ b/clases/templates/clases/trabajos_practicos.html
@@ -1,6 +1,7 @@
 {% extends 'base/base.html' %}
 
 {% block content %}
+<div class="col-sm-12">
   <div class="row">
     <div class="col-sm-8">
       <h1 class="inline-title"> Trabajos prácticos de Procesos Industriales</h1>
@@ -25,5 +26,5 @@
       </div>
     {% endfor %}
   {% endif %}
-
+</div>
 {% endblock %}
