--- a/gallery/templates/gallery/gallery_home.html
+++ b/gallery/templates/gallery/gallery_home.html
@@ -1,6 +1,7 @@
 {% extends 'base/base.html' %}
 
 {% block content %}
+<div class="col-sm-12">
   <h1>Galería de imágenes de Procesos Industriales</h1>
 
   {% if sections %}
@@ -11,4 +12,5 @@
     <h3> Todavía no hay imagenes para mostrar </h3>
 
   {% endif %}
+</div>
 {% endblock %}
