--- a/base/templates/registration/activation_complete.html
+++ b/base/templates/registration/activation_complete.html
@@ -1,5 +1,7 @@
 {% extends 'base/base.html' %}
 
 {% block content %}
-<h1> Felicitacines! Tu cuenta ya está activada! </h1>
+<div class="col-sm-12">
+  <h1> Felicitacines! Tu cuenta ya está activada! </h1>
+</div>
 {% endblock %}
