--- a/base/templates/registration/logout.html
+++ b/base/templates/registration/logout.html
@@ -1,6 +1,7 @@
 {% extends 'base/base.html' %}
 
 {% block content %}
-<h1> Cerraste sesión correctamnte. </h1>
-
+<div class="col-sm-12">
+  <h1> Cerraste sesión correctamnte. </h1>
+</div>
 {% endblock %}
