--- a/base/templates/registration/registration_form.html
+++ b/base/templates/registration/registration_form.html
@@ -1,6 +1,7 @@
 {% extends 'base/base.html' %}
 
 {% block content %}
+<div class="col-sm-12">
 <h3> Bienvenido a Loiprocesos.com</h3>
 
 <p>Registrate en Loiprocesos.com y solicitá autorización para acceder a todo el material y las funciones del sitio web.</p>
@@ -11,4 +12,5 @@
 </form>
 
 <p>¿Ya tenés una cuenta? </p><a href="/accounts/login">Logueate haciendo click aquí</a>
+</div>
 {% endblock %}
