--- a/clases/templates/clases/ver_clase.html
+++ b/clases/templates/clases/ver_clase.html
@@ -1,6 +1,7 @@
 {% extends 'base/base.html' %}
 
 {% block content %}
+<div class="col-sm-12">
   <h1>Clase {{ clase }}</h1>
 
   <h2>Hay {{ exposiciones|length }} exposicion/es en esta clase </h2>
@@ -23,5 +24,5 @@
     {{tiempos_chart.0|safe}}
     {{tiempos_chart.1|safe}}
   {% endif %}
-
+</div>
 {% endblock %}
