--- a/clases/templates/clases/ver_exposicion.html
+++ b/clases/templates/clases/ver_exposicion.html
@@ -2,6 +2,7 @@
 
 
 {% block content %}
+<div class="col-sm-12">
   <h1>Exposición: {{ exposicion }}</h1>
 
   <div class="row">
@@ -98,5 +99,5 @@
     </div>
 
   </div>
-
+</div>
 {% endblock %}
