--- a/grupos/templates/grupos/grupos_home.html
+++ b/grupos/templates/grupos/grupos_home.html
@@ -1,6 +1,7 @@
 {% extends 'base/base.html' %}
 
 {% block content %}
+<div class="col-sm-12">
   <h1>Grupos del año {{ año }}:</h1>
   <ul>
     {% for grupo in grupos %}
@@ -8,7 +9,7 @@
     {% endfor %}
   </ul>
   <h1>Ver grupos y trabajos prácticos de años anteriores: </h1>
-  <iframe src="https://drive.google.com/embeddedfolderview?id=0B6B1OSj94GfIYXpjUGlRQWthRDQ#grid" 
+  <iframe src="https://drive.google.com/embeddedfolderview?id=0B6B1OSj94GfIYXpjUGlRQWthRDQ#grid"
           style="width:100%; height:600px; border:0;"></iframe>
-
+</div>
 {% endblock %}
