--- a/teoria/templates/teoria/add_recurso.html
+++ b/teoria/templates/teoria/add_recurso.html
@@ -1,6 +1,7 @@
 {% extends 'base/base.html' %}
 
 {% block content %}
+<div class="col-sm-12">
   {% if is_material %}
     <h2>Agregar material para mejorar el aprendizaje de una unidad</h2>
   {% else %}
@@ -13,5 +14,5 @@
     <input type="submit" name="add" class="btn-dark" value="Cargar y agregar nuevo"></input>
 
   </form>
-
+</div>
 {% endblock %}
