fixed exposicion hour widget

--- a/clases/templates/clases/ver_exposicion.html
+++ b/clases/templates/clases/ver_exposicion.html
@@ -81,7 +81,7 @@
         <script type="text/javascript">
             $(function () {
                 $('#id_start_expo, #id_start_ques, #id_finish_expo').datetimepicker({
-                    format: 'DD/MM/YYYY hh:mm:ss'
+                    format: 'DD/MM/YYYY HH:mm:ss'
                 });
             });
         </script>
