--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -17,6 +17,21 @@
         {% endif %}
       </div>
     </div>
+    <h2> Clase anterior: {{ clase_ant }}</h2>
+    <div class="row">
+      <div class="col-sm-6">
+        {% if tiempos_ant %}
+          {{ tiempos_ant.0 | safe }}
+          {{ tiempos_ant.1 | safe }}
+        {% endif %}
+      </div>
+      <div class="col-sm-6">
+        {% if preguntas_ant %}
+          {{ preguntas_ant.0 | safe }}
+          {{ preguntas_ant.1 | safe }}
+        {% endif %}
+      </div>
+    </div>
     <a href="{% url 'clases_home' %}" class="big"> Ver todas las clases </a>
 
     <a href="{% url 'trabajos_practicos' %}">
