--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -2,7 +2,7 @@
 
 {% block content %}
   <div class="col-sm-6">
-    <h2> Última clase: {{ clase }}</h2>
+    <h2><a href="{% url 'ver_clase' clase.id %}"> Última clase: {{ clase }}</a></h2>
     <div class="row">
       <div class="col-sm-6">
         {% if tiempos %}
@@ -17,7 +17,7 @@
         {% endif %}
       </div>
     </div>
-    <h2> Clase anterior: {{ clase_ant }}</h2>
+    <h2><a href="{% url 'ver_clase' clase_ant.id %}"> Clase anterior: {{ clase_ant }}</a></h2>
     <div class="row">
       <div class="col-sm-6">
         {% if tiempos_ant %}
@@ -32,8 +32,12 @@
         {% endif %}
       </div>
     </div>
-    <a href="{% url 'clases_home' %}" class="big"> Ver todas las clases </a>
-
+    <a href="{% url 'clases_home' %}" class="big">
+      <div class="row relleno">
+        Ver todas las clases
+      </div>
+    </a>
+    <br />
     <a href="{% url 'trabajos_practicos' %}">
       <div class="row relleno">
         Ver guía de trabajos prácticos
@@ -47,11 +51,11 @@
           Ver grupos de trabajo y Trabajos Finales de años anteriores
         </div>
       </a>
-    <h3>Teoría de Procesos Industriales</h3>
+    <h2><a href="{% url 'teoria_home'%}"> Teoría de procesos industriales: </a></h2>
     {% for u in unidades %}
-      <ul>
-        <li><a href="{% url 'ver_unidad' u.id %}"> {{ u }}</a></li>
-      </ul>
+      <div class="list-group">
+        <a type="button" class="list-group-item" href="{% url 'ver_unidad' u.id %}"> {{ u }}</a>
+      </div>
     {% endfor %}
   </div>
 
