--- a/base/static/css/base.css
+++ b/base/static/css/base.css
@@ -77,6 +77,10 @@ span {
   color: white
 }
 
+.section {
+  margin-bottom: 30px;
+}
+
 .btn-soft {
   background-color: #EEEEEE;
   color: #999999;
