--- a/clases/templates/clases/ver_exposicion.html
+++ b/clases/templates/clases/ver_exposicion.html
@@ -3,79 +3,115 @@
 
 {% block content %}
 <div class="col-sm-12">
-  <h1>Exposición: {{ exposicion }}</h1>
+  <div class="container-fluid section">
+    <h1>Exposición: {{ exposicion }}</h1>
+  </div>
 
   <div class="row">
     <div class="col-sm-8">
-      {% if exposicion.start_expo %}
-        <p>Comienzo de la exposición: {{ exposicion.start_expo }}</p>
-      {% elif perms.clases %}
-        <form method="POST" class="post-form">{% csrf_token %}
-          {{ st_expo_form.as_p }}
-          <input type="submit" name="st_ex" class="save btn btn-default" value="Cargar!"></input>
-        </form>
-      {% endif %}
 
-      {% if exposicion.start_ques %}
-        <p>Comienzo de las preguntas: {{ exposicion.start_ques }}</p>
-      {% elif perms.clases %}
-        <form method="POST" class="post-form">{% csrf_token %}
-          {{ st_ques_form.as_p }}
-          <input type="submit" name="st_qu" class="save btn btn-default" value="Cargar!"></input>
-        </form>
-      {% endif %}
+      <div class="container-fluid section">
+        <div class="row">
+          <div class="col-sm-6">
+            <a href="{% url 'ver_grupo' exposicion.grupo.id %}">
+              <div class="row relleno">
+                Ver G{{exposicion.grupo.numero}} - {{exposicion.grupo.producto}}
+              </div>
+            </a>
+          </div>
+          <div class="col-sm-6">
+            <a href="{% url 'ver_tp' exposicion.tp.id %}">
+              <div class="row relleno">
+                Ver {{exposicion.tp}}
+              </div>
+            </a>
+          </div>
+        </div>
+      </div>
 
-      {% if exposicion.finish_expo %}
-        <p>Fin de la exposición: {{ exposicion.finish_expo }}</p>
-      {% elif perms.clases %}
-        <form method="POST" class="post-form">{% csrf_token %}
-          {{ fi_expo_form.as_p }}
-          <input type="submit" name="fi_ex" class="save btn btn-default" value="Cargar!"></input>
-        </form>
-      {% endif %}
+      <div class="container-fluid section">
+        <div class="panel panel-primary">
+          <div class="panel-body">
+            {% if exposicion.start_expo %}
+              <p>Comienzo de la exposición: {{ exposicion.start_expo }}</p>
+            {% elif perms.clases %}
+              <form method="POST" class="post-form">{% csrf_token %}
+                {{ st_expo_form.as_p }}
+                <input type="submit" name="st_ex" class="save btn btn-default" value="Cargar!"></input>
+              </form>
+            {% endif %}
 
-      <h2>Preguntas realizadas en esta exposicion: </h2>
-      <ul>
-      {% if q_preguntas %}
-        {% for preg in q_preguntas %}
-        <li>
-          {{ preg.preguntador }} realizó {{ preg.cantidad }} pregunta/s
-          {% if preg.primero %}
-            <span>primero!</span>
-          {% elif preg.ultimo %}
-            <span>ultimo!</span>
-          {% endif %}
-        </li>
-        {% endfor %}
-      </ul>
-      {% else %}
-       <p>Todavía no se registraron las cantidades de preguntas por grupos hechas en clases</p>
-      {% endif %}
-      {% if perms.clases %}
-        <h2> Agregar preguntas por grupo a esta clase: </h2>
+            {% if exposicion.start_ques %}
+              <p>Comienzo de las preguntas: {{ exposicion.start_ques }}</p>
+            {% elif perms.clases %}
+              <form method="POST" class="post-form">{% csrf_token %}
+                {{ st_ques_form.as_p }}
+                <input type="submit" name="st_qu" class="save btn btn-default" value="Cargar!"></input>
+              </form>
+            {% endif %}
 
-        <form method="POST" class="post-form">{% csrf_token %}
-          {{ cont_preg_form.as_p }}
-          <input type="submit" name="pregunta" class="save btn btn-default" value="Cargar!"></input>
-        </form>
-      {% endif %}
+            {% if exposicion.finish_expo %}
+              <p>Fin de la exposición: {{ exposicion.finish_expo }}</p>
+            {% elif perms.clases %}
+              <form method="POST" class="post-form">{% csrf_token %}
+                {{ fi_expo_form.as_p }}
+                <input type="submit" name="fi_ex" class="save btn btn-default" value="Cargar!"></input>
+              </form>
+            {% endif %}
+          </div>
+        </div>
+      </div>
 
-      {% if preguntas_agrupadas %}
-        <h2> Preguntas: </h2>
-        {% for grupo, preguntas in preguntas_agrupadas %}
-          <h4>{{grupo}}</h4>
-          <ul>
-            {% for pregunta in preguntas %}
-              <li>
-                {{ pregunta }}
-                {% if pregunta.mejor %}
-                  <span>Seleccionada como Mejor</span>
-                {% endif %}
-              </li>
-            {% endfor %}
-          </ul>
-        {% endfor %}
-      {% endif %}
+      <div class="container-fluid section">
+        <h2>Preguntas realizadas en esta exposicion: </h2>
+        <ul>
+        {% if q_preguntas %}
+          {% for preg in q_preguntas %}
+          <li>
+            {{ preg.preguntador }} realizó {{ preg.cantidad }} pregunta/s
+            {% if preg.primero %}
+              <span>primero!</span>
+            {% elif preg.ultimo %}
+              <span>ultimo!</span>
+            {% endif %}
+          </li>
+          {% endfor %}
+        </ul>
+        {% else %}
+         <p>Todavía no se registraron las cantidades de preguntas por grupos hechas en clases</p>
+        {% endif %}
+          
+      </div>
+
+      <div class="container-fluid section">
+        {% if perms.clases %}
+          <h2> Agregar preguntas por grupo a esta clase: </h2>
+
+          <form method="POST" class="post-form">{% csrf_token %}
+            {{ cont_preg_form.as_p }}
+            <input type="submit" name="pregunta" class="save btn btn-default" value="Cargar!"></input>
+          </form>
+        {% endif %}
+      </div>
+
+      <div class="container-fluid section">
+        {% if preguntas_agrupadas %}
+          <h2> Preguntas: </h2>
+          {% for grupo, preguntas in preguntas_agrupadas %}
+            <h4>{{grupo}}</h4>
+            <ul>
+              {% for pregunta in preguntas %}
+                <li>
+                  {{ pregunta }}
+                  {% if pregunta.mejor %}
+                    <span>Seleccionada como Mejor</span>
+                  {% endif %}
+                </li>
+              {% endfor %}
+            </ul>
+          {% endfor %}
+        {% endif %}
+      </div>
 
 
         <script type="text/javascript">
