--- a/clases/templates/clases/trabajos_practicos.html
+++ b/clases/templates/clases/trabajos_practicos.html
@@ -8,7 +8,7 @@
     </div>
     <div class="col-sm-4" id="agregar">
       {% if perms.clases %}
-        <a class="btn2 inline-title" href="{% url 'edit_tp' %}">Agregar Trabajo práctico</a>
+        <a class="btn-blue inline-title" href="{% url 'edit_tp' %}">Agregar Trabajo práctico</a>
       {% endif %}
     </div>
   </div>
@@ -16,12 +16,17 @@
   {% if trabajos %}
     {% for trabajo in trabajos %}
       <div class="row">
+        <div class="col-sm-12">
         {% if perms.clases %}
           <a class="btn-soft inline-title" href="{% url 'edit_tp' trabajo.id %}">Editar</a>
         {% endif %}
-        <div class="inline-title">
-          <h3> {{ trabajo }} </h3>
-          <p> {{ trabajo.descripcion | safe }} </p>
+
+          <div class="list-group">
+            <a href="{% url 'ver_tp' trabajo.id %}" class="list-group-item">
+              <h4 class="list-group-item-heading">{{ trabajo }}</h4>
+              <p class="list-group-item-text">{{ trabajo.descripcion | safe }}</p>
+            </a>
+          </div>
         </div>
       </div>
     {% endfor %}
